--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "tieu-doan-15-portal",
   "private": true,
@@ -6,9 +7,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server.js",
+    "db:push": "prisma db push"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +27,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "prisma": "^6.0.0",
     "typescript": "^5.4.2",
     "vite": "^5.1.5"
   }
