--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 
 {
-  "name": "tieudoan15f324",
+  "name": "tieu-doan-15-portal",
+  "private": true,
   "version": "1.0.0",
-<<<<<<< HEAD
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,166 +17,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-=======
-  "description": "![Tiểu đoàn 15 Banner](https://picsum.photos/1000/300?grayscale&blur=2)",
-  "main": "server.js",
-  "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "@supabase/supabase-js": "^2.90.1",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react": "^5.1.2",
-    "adler-32": "^1.3.1",
-    "aws-ssl-profiles": "^1.1.2",
-    "baseline-browser-mapping": "^2.9.14",
-    "browserslist": "^4.28.1",
-    "c12": "^3.1.0",
-    "caniuse-lite": "^1.0.30001764",
-    "cfb": "^1.2.2",
-    "chokidar": "^4.0.3",
-    "citty": "^0.1.6",
-    "clsx": "^2.1.1",
-    "codepage": "^1.15.0",
-    "confbox": "^0.2.2",
-    "consola": "^3.4.2",
-    "convert-source-map": "^2.0.0",
-    "crc-32": "^1.2.2",
-    "cross-spawn": "^7.0.6",
-    "csstype": "^3.2.3",
-    "d3-array": "^3.2.4",
-    "d3-color": "^3.1.0",
-    "d3-ease": "^3.0.1",
-    "d3-format": "^3.1.2",
-    "d3-interpolate": "^3.0.1",
-    "d3-path": "^3.1.0",
-    "d3-scale": "^4.0.2",
-    "d3-shape": "^3.2.0",
-    "d3-time": "^3.1.0",
-    "d3-time-format": "^4.1.0",
-    "d3-timer": "^3.0.1",
-    "debug": "^4.4.3",
-    "decimal.js-light": "^2.5.1",
-    "deepmerge-ts": "^7.1.5",
-    "defu": "^6.1.4",
-    "denque": "^2.1.0",
-    "destr": "^2.0.5",
-    "dom-helpers": "^5.2.1",
-    "dotenv": "^16.6.1",
-    "electron-to-chromium": "^1.5.267",
-    "empathic": "^2.0.0",
-    "esbuild": "^0.21.5",
-    "escalade": "^3.2.0",
-    "eventemitter3": "^4.0.7",
-    "exsolve": "^1.0.8",
-    "fast-equals": "^5.4.0",
-    "foreground-child": "^3.3.1",
-    "frac": "^1.1.2",
-    "generate-function": "^2.3.1",
-    "gensync": "^1.0.0-beta.2",
-    "get-port-please": "^3.1.2",
-    "giget": "^2.0.0",
-    "graceful-fs": "^4.2.11",
-    "grammex": "^3.1.12",
-    "http-status-codes": "^2.3.0",
-    "iconv-lite": "^0.7.2",
-    "internmap": "^2.0.3",
-    "is-property": "^1.0.2",
-    "isexe": "^2.0.0",
-    "jiti": "^2.6.1",
-    "js-tokens": "^4.0.0",
-    "jsesc": "^3.1.0",
-    "json5": "^2.2.3",
-    "lilconfig": "^2.1.0",
-    "lodash": "^4.17.21",
-    "long": "^5.3.2",
-    "loose-envify": "^1.4.0",
-    "lru-cache": "^5.1.1",
-    "lru.min": "^1.1.3",
->>>>>>> 722ff39 (feat: Rebuild authentication system with enhanced security and user experience)
     "lucide-react": "^0.344.0",
-    "ms": "^2.1.3",
-    "named-placeholders": "^1.1.6",
-    "nanoid": "^3.3.11",
-    "node-fetch-native": "^1.6.7",
-    "node-releases": "^2.0.27",
-    "nypm": "^0.6.2",
-    "object-assign": "^4.1.1",
-    "ohash": "^2.0.11",
-    "path-key": "^3.1.1",
-    "pathe": "^2.0.3",
-    "perfect-debounce": "^1.0.0",
-    "picocolors": "^1.1.1",
-    "pkg-types": "^2.3.0",
-    "postcss": "^8.5.6",
-    "prisma": "^5.22.0",
-    "prop-types": "^15.8.1",
-    "proper-lockfile": "^4.1.2",
-    "rc9": "^2.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-is": "^18.3.1",
-    "react-refresh": "^0.17.0",
-    "react-smooth": "^4.0.4",
-    "react-transition-group": "^4.4.5",
-    "readdirp": "^4.1.2",
-    "recharts": "^2.15.4",
-    "recharts-scale": "^0.4.5",
-    "regexp-to-ast": "^0.5.0",
-    "retry": "^0.12.0",
-    "rollup": "^4.55.1",
-    "safer-buffer": "^2.1.2",
-    "scheduler": "^0.23.2",
-    "semver": "^6.3.1",
-    "seq-queue": "^0.0.5",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "signal-exit": "^4.1.0",
-    "source-map-js": "^1.2.1",
-    "sqlstring": "^2.3.3",
-    "ssf": "^0.11.2",
-    "std-env": "^3.9.0",
-    "tiny-invariant": "^1.3.3",
-    "tinyexec": "^1.0.2",
-    "type-fest": "^4.41.0",
-    "typescript": "^4.9.5",
-    "update-browserslist-db": "^1.2.3",
-    "valibot": "^1.2.0",
-    "victory-vendor": "^36.9.2",
-    "vite": "^5.4.21",
-    "which": "^2.0.2",
-    "wmf": "^1.0.2",
-    "word": "^0.3.0",
-    "xlsx": "^0.18.5",
-    "yallist": "^3.1.1",
-    "zeptomatch": "^2.0.2"
+    "recharts": "^2.12.3",
+    "xlsx": "^0.18.5"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "vite"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TranCongHung/Tieudoan15f324.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "bugs": {
-    "url": "https://github.com/TranCongHung/Tieudoan15f324/issues"
-  },
-  "homepage": "https://github.com/TranCongHung/Tieudoan15f324#readme",
   "devDependencies": {
-<<<<<<< HEAD
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "prisma": "^6.0.0",
     "typescript": "^5.4.2",
     "vite": "^5.1.5"
-=======
-    "@types/node": "^25.0.9"
->>>>>>> 722ff39 (feat: Rebuild authentication system with enhanced security and user experience)
   }
 }
