--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "tieu-doan-15-portal",
   "private": true,
@@ -8,11 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "node server.js",
-    "db:push": "prisma db push"
+    "server": "node server.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.0",
     "@supabase/supabase-js": "^2.48.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -25,10 +22,13 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "prisma": "^6.0.0",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.4.2",
     "vite": "^5.1.5"
   }
