--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "server": "node server.js"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@supabase/supabase-js": "^2.48.1",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.3",
     "xlsx": "^0.18.5"
