feat: migrate from Node.js to PHP+MySQL for InfinityFree deployment
- Add complete PHP API backend (api/config.php, api/index.php)
- Create PHP API client (services/api_php.ts)
- Add environment-based API switching (services/config.ts, services/index.ts)
- Update database schema for InfinityFree compatibility
- Add comprehensive deployment documentation
- Fix TypeScript build errors
- Add security measures (gitignore credentials)
- Ready for InfinityFree production deployment

BREAKING CHANGE: Node.js backend replaced with PHP backend

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Security - NEVER commit database credentials
+api/config.php
+
+# Environment files
+.env
+.env.local
+.env.production
+
+# Backup files
+*.sql.backup
+*.backup
